The browser hangs and locks the system when choosing a very high quality video and going full screen
Categories
(Core :: Audio/Video, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
relnote-firefox | --- | 94+ |
firefox-esr78 | --- | unaffected |
firefox-esr91 | --- | unaffected |
firefox93 | --- | unaffected |
firefox94 | blocking | verified |
firefox95 | + | verified |
People
(Reporter: danibodea, Assigned: bradwerth)
References
Details
Attachments
(2 files, 1 obsolete file)
48 bytes,
text/x-phabricator-request
|
Details | Review | |
1.10 KB,
patch
|
RyanVM
:
approval-mozilla-release+
|
Details | Diff | Splinter Review |
Note
- When the user loads a youtube high-definition video (4k), selects the best video quality, and goes into full screen, he will notice that the video is not displayed and the browser freezes. Moreover, the system is frozen as the user cannot exit this state unless restarting the whole system.
Affected versions
- Nightly v95.0a1 from 2021-10-25 (affected)
- Nightly v95.0a1 from 2021-10-18 (unaffected)
Affected platforms
- Mac OS 10.12 (affected) ONLY
- Mac OS 10.13 (unafected)
Steps to reproduce
- Launch browser.
- Load any of the links:
https://www.youtube.com/watch?v=Ppz41EmaJyU
https://www.youtube.com/watch?v=s6zR2T9vn2c
https://www.youtube.com/watch?v=nRt4Duf7GoI - Select the highest video quality (4k/5k)
- Put the video in full screen.
Expected result
- The video is properly played on full screen.
Actual result
- A black screen is displayed; the user cannot exit this state, only system restart. (CMD+OPT+ESC hotkey also not usable).
Regression range
- Appears to be a regression, but I can't properly confirm it considering the actual results (system hang state) and the fact that mozregression does not run on this system.
Additional notes
This issue also reproduces after turning off the feature (security.sandbox.content.mac.disconnect-windowserver = false + restart), but it does not occur on a build right before the feature is pushed to nightly (2021-10-18).
- I have assumed that this bug is related to the new sandbox implementation! Please change it if you believe otherwise and let me know if there's more testing I can help with.
Reporter | ||
Comment 1•3 years ago
•
|
||
Using another set of steps:
- Launch browser.
- Load the twitch main page:
https://www.twitch.com - Put the autoplayed video in full screen.
Expected result:
The video is properly played on full screen.
Actual result:
A black screen is displayed; the user cannot exit this state, only system restart. (CMD+OPT+ESC hotkey also not usable).
This issue was reproduced on a build that does not have the new sandbox feature (18-10-2021).
This being said, we can safely assume that this issue is not related to the sandbox implementation.
Comment 2•3 years ago
|
||
Brad, this sounds like it might be related to the video layering changes. :danibodea confirmed this is only reproducible on 10.12.
I've asked :danibodea to check if the problem is reproducible with layers.iosurfaceimage.use-nv12=false
.
Reporter | ||
Comment 3•3 years ago
|
||
After having requested to test with the layers.iosurfaceimage.use-nv12=false, it appeare that the issue no longer reproduces.
Steps to reproduce
- Launch browser.
- go to about config
- Flip layers.iosurfaceimage.use-nv12 pref to FALSE.
- Load any of the links:
https://www.youtube.com/watch?v=Ppz41EmaJyU
https://www.youtube.com/watch?v=s6zR2T9vn2c
https://www.youtube.com/watch?v=nRt4Duf7GoI - Select the highest video quality (4k/5k)
- Put the video in full screen.
Expected result
- The video is properly played on full screen.
Actual result - The video is properly played on full screen.
Reporter | ||
Updated•3 years ago
|
Updated•3 years ago
|
Comment 4•3 years ago
|
||
Are we 100% certain that 94 isn't affected here?
Updated•3 years ago
|
Comment 5•3 years ago
|
||
(In reply to Ryan VanderMeulen [:RyanVM] from comment #4)
Are we 100% certain that 94 isn't affected here?
Confirmed over Slack that the 94 RC build is not affected.
Assignee | ||
Comment 6•3 years ago
|
||
I'll attempt to reproduce.
Assignee | ||
Comment 7•3 years ago
|
||
Updated•3 years ago
|
Assignee | ||
Comment 8•3 years ago
|
||
(In reply to Brad Werth [:bradwerth] from comment #6)
I'll attempt to reproduce.
Without an easy way to access a 10.12 device, I can't reproduce. This patch should solve the issue as reported.
Assignee | ||
Updated•3 years ago
|
Updated•3 years ago
|
Assignee | ||
Comment 9•3 years ago
|
||
Comment 10•3 years ago
|
||
Comment 11•3 years ago
|
||
Was Twitch checked in the 94 RC build? YouTube usually doesn't get detached mode in 94 because bug 1736672 is not in 94. However, Twitch uses H264 and so will likely be getting detached mode in 94 and be unaffected by the layers.iosurfaceimage.use-nv12 pref. If Twitch hangs in Nightly, I don't know why it wouldn't hang in 94.
Updated•3 years ago
|
Comment 12•3 years ago
|
||
Markus confirmed that Twitch black screens and hangs the machine in 94
Comment 13•3 years ago
|
||
Comment on attachment 9248318 [details]
Bug 1737998: Prevent macOS 10.12 from using specialized video layers.
Beta/Release Uplift Approval Request
- User impact if declined: Machine hangs in fullscreen on Twitch on 10.12
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Very low risk as it just adds a 10.12 version check.
- String changes made/needed:
Comment 14•3 years ago
|
||
The surrounding code looks a little different on 94 because 94 doesn't have bug 1736446 or bug 1731956, but the same way of fixing it would work on 94 too.
Somehow this seems to be related to the fade-to-black effect from non-native fullscreen. If I enable native fullscreen by setting full-screen-api.macos-native-full-screen
to true, the hang and the black screen issue do not happen, and the video plays normally and achieves detachment successfully.
Comment 15•3 years ago
|
||
I have downloaded the autoland build with this patch from treeherder and confirmed that it fixes the problem on 10.12.
Comment 16•3 years ago
|
||
Comment 17•3 years ago
|
||
bugherder |
Reporter | ||
Comment 18•3 years ago
|
||
I have verified the fix in the latest Nightly v95.0a1 on Mac OS 10.12.
The browser will no longer cause a black screen/system hang.
The originally reported issue never occurred on Beta v94.
The graphical performance issue is a separate issue. It appears that Release 93 plays high-definition videos considerably better than Beta 94 and Nightly 95. Should I log another bug or maybe there is one logged already?
Comment 19•3 years ago
|
||
(In reply to Bodea Daniel [:danibodea] from comment #18)
I have verified the fix in the latest Nightly v95.0a1 on Mac OS 10.12.
The browser will no longer cause a black screen/system hang.
The originally reported issue never occurred on Beta v94.
The steps for reproducing using Twitch in comment 1 don't reproduce the problem for you in the 94 rc? They do reproduce the problem for mstange.
The graphical performance issue is a separate issue. It appears that Release 93 plays high-definition videos considerably better than Beta 94 and Nightly 95. Should I log another bug or maybe there is one logged already?
Please log another bug for that.
Reporter | ||
Comment 20•3 years ago
•
|
||
I have retested the supposed performance issue on MacMini (Mid 2011) and MacBook Air (Mid 2013). FYI, hardware-wise.
I have compared the MacOS 10.12 (MacMini) vs MacOS 10.13 (MacMini) vs 11.6 (MacBook Air).
All channels (Nightly v95.0a1, Beta v94.0, Release v93.0, ESR v91.2.0esr) across each platform perform the same under the same stress:
-
Twitch:
-720p60 ok
-1080p60 not ok (MacBook Air with MacOS 11 performed better here since it has a beter graphics card) -
Youtube:
-1440p (2k) ok
-2160p (4k) barely (MacBook Air with MacOS 11 performed better here since it has a beter graphics card)
-2880p (5k) not ok
This being considered, there is no recent regression observable on these systems.
It was my mistake to mention it in comment18, might have tested with lower vdeo quality (720p60)
Jeff, if you managed to reproduce the original issue in a Beta94 on your MacOS 10.12 system, then you should set the flag as affected, however, the original issue (black screen and full system freeze) did not reproduce in Beta 94 on my system. Can you clear this up?
Comment 21•3 years ago
|
||
Daniel, since you were only able to reproduce the Twitch issue in 95 can you get a rough regression window for when it was introduced there? Does it match these same dates?
- Nightly v95.0a1 from 2021-10-25 (affected)
- Nightly v95.0a1 from 2021-10-18 (unaffected)
Can you also check which codec Twitch is giving you? From the video controls: Settings -> Advanced -> Video stats and then look at the "Codecs" line.
Reporter | ||
Comment 22•3 years ago
|
||
After testing with 1080p60 random videos from, twitch, I've got these results:
- 95.0a1 (2021-10-01) (64-bit) - full system hang
- 95.0a1 (2021-10-05) (64-bit) - full system hang
- 95.0a1 (2021-10-10) (64-bit) - full system hang
- 95.0a1 (2021-10-18) (64-bit) - full system hang
- 95.0a1 (2021-10-19) (64-bit) - full system hang
In conclusion, it occurs even before the adition (/implermentation?) of the layers.iosurfaceimage.use-nv12 pref.
Also, the initial regression range provided is incorrect because the issue appears to be intermitent.
Considering this regression invetigation takes so long, I'll post this now and come back later with more info on the intruduction of this issue.
To answert the other question, it appears that the 1080p60 video quality uses a different codec than the rest of the quality options:
1080p60 - avc1.64002A,mp4a.40.2
720p60 - avc1.4D401F,mp4a.40.2
720p - avc1.4D401F,mp4a.40.2
480p - avc1.4D401F,mp4a.40.2
360p - avc1.4D401F,mp4a.40.2
160p - avc1.4D401F,mp4a.40.2
Assignee | ||
Updated•3 years ago
|
Reporter | ||
Comment 23•3 years ago
|
||
I have manually investigated for the introduction of the issue and these are my results:
First bad build: Nightly 20210922094736
Last good build: Nightly 20210921190609
All test results:
94.0a1 2021-09-20 - DOES NOT REPRO
20210921190609 - DOES NOT REPRO
20210922094736 - REPRO!
20210922215301 - REPRO!
94.0a1 2021-09-25 - REPRO!
94.0a1 2021-09-30 - REPRO!
Furthermore, I managed to reproduce it in Beta v94.0b9 and v94.0 RC, but with live Twitch 1080p60 video. It appears to ONLY reproduce with this.
I reconfirmed that it does not occur in Release v93.0 and Nightly v95.0a1, after the "fix".
Reopening for reproduction in Beta94.
Comment 24•3 years ago
|
||
Ok, great. I'm sure it was painful to get that range.
It's close enough to the landing of bug 1653417 that it feels like we can probably just assign blame there.
Comment 25•3 years ago
|
||
(In reply to Bodea Daniel [:danibodea] from comment #23)
Reopening for reproduction in Beta94.
The status for 94 is set to affected to reflect that. Bug resolution tracks what landed on mozilla-central. Re-closing since it was confirmed that the patch landed here took care of the problem for 95+.
Updated•3 years ago
|
Updated•3 years ago
|
Updated•3 years ago
|
Comment 26•3 years ago
|
||
Comment on attachment 9248318 [details]
Bug 1737998: Prevent macOS 10.12 from using specialized video layers.
Approved for 94.0.1.
Updated•3 years ago
|
Updated•3 years ago
|
Comment 27•3 years ago
|
||
bugherder uplift |
Comment 29•3 years ago
|
||
Added to the Fx 94.0.1 relnotes:
Fixed browser hangs when viewing fullscreen videos on macOS 10.12
Comment 30•3 years ago
|
||
Hello! Reproduced the initial issue on macOS 10.12 with Firefox 95.0a1 (20211025214106) on Twitch 1080p@60 and 4k Youtube fullscreen videos. Also, I reproduced the issue on 94.0 with Twitch 1080p@60 fullscreen videos.
I can no longer reproduce the issue with 94.0.1 (20211103134640) on macOS 10.12.6 by accessing random Twitch 1080p@60 videos and entering/exiting fullscreen multiple times. Also, I tested the issue on Youtube comment 0 links with 4k/5k fullscreen videos and the issue is not reproducible.
Description
•