Bug 1737998: Prevent macOS 10.12 from using specialized video layers. r=mstange

Differential Revision: https://phabricator.services.mozilla.com/D129869